refactor filter radio

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -64,3 +64,8 @@ html.dark {
 html.dark .card {
   background-color: var(--very-dark-desaturated-blue);
 }
+
+a {
+  color: var(--bright-blue);
+  text-decoration: none;
+}
